--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
+<h3><%= link_to "Log In", '/login' %></h3>
 
 
 <p style="text-align:center;"><%= button_to "Create New User", '/register', method: :get, local: true %></p><br>
